# lotse

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ai-memory-search-sprint-1-plan.md  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml
docs/: ai-memory-search-model-shortlist.md  ai-memory-search-mvp-decision.md  ai-memory-search-requirements.md  anti-failure-plan.md  n8n-raspberry-pi-demo.md  plugins.md  product-maturity.md  produktreife-release-plan.md  project-learnings.md
examples/: kurier-n8n-demo.config.toml
plugins/arkiv-webhook/: README.md  pyproject.toml
plugins/arkiv-webhook/src/arkiv_webhook/: __init__.py
plugins/arkiv-webhook/tests/: test_formatting.py
plugins/lotse-webhook/: README.md  pyproject.toml
plugins/lotse-webhook/src/lotse_webhook/: __init__.py
plugins/lotse-webhook/tests/: test_formatting.py
scripts/: demo-n8n-smoke  pi-n8n-setup  release-check  smoke-editable-install  smoke-wheel-install
src/arkiv/: __init__.py  cli.py  notifications.py  service.py  setup_wizard.py
src/arkiv/application/: __init__.py  beta.py  context.py  ingest.py  review.py  search.py  status.py
src/arkiv/commands/: __init__.py  audit.py  beta.py  common.py  doctor.py  email.py  eval.py  export.py  ingest.py  plugins.py  search.py  server.py  service.py  setup.py  status.py  tui.py  undo.py  webhooks.py
src/arkiv/core/: auditor.py  classifier.py  config.py  embeddings.py  engine.py  hardware.py  llm.py  router.py  search_assistant.py
src/arkiv/dashboard/: routes.py
src/arkiv/dashboard/templates/: base.html  dashboard.html
src/arkiv/dashboard/templates/partials/: beta_feedback_result.html  recent.html  review.html  review_done.html  search_results.html  stats.html  upload_result.html
src/arkiv/db/: store.py
src/arkiv/evals/: __init__.py  ai_search_benchmark.py  llm_benchmark.py
src/arkiv/inlets/: api.py  email.py  watch.py
src/arkiv/plugins/: manager.py  spec.py
src/arkiv/tui/: app.py  styles.css
src/lotse/: __init__.py  cli.py  setup_wizard.py
src/lotse/core/: auditor.py  classifier.py  config.py  embeddings.py  engine.py  ocr.py  router.py
src/lotse/dashboard/: routes.py
src/lotse/dashboard/templates/: base.html  dashboard.html
src/lotse/dashboard/templates/partials/: recent.html  search_results.html  stats.html  upload_result.html
src/lotse/db/: store.py
src/lotse/inlets/: api.py  email.py  watch.py
src/lotse/plugins/: manager.py  spec.py
src/lotse/tui/: app.py
tests/: test_ai_search_benchmark.py  test_ai_search_eval_harness.py  test_api.py  test_application.py  test_auditor.py  test_classifier.py  test_cli.py  test_cli_registration.py  test_cli_smoke.py  test_config.py  test_dashboard.py  test_email.py  test_embeddings.py  test_engine_memory_search.py  test_hardware.py  test_llm_benchmark.py  test_llm_provider.py  test_ocr.py  test_router.py  test_search_assistant.py  test_semantic_search.py  test_store.py  test_tui_smoke.py  test_webhook.py  test_wizard.py
tests/fixtures/: ai_search_benchmark.json  classifier_benchmark.json  retrieval_benchmark.json
