[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kurier"
version = "0.3.0"
description = "Universal capture → classify → route platform. Your AI-powered data pilot."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "HerrStolzier" },
]
keywords = ["ai", "classification", "routing", "automation", "local-first", "llm", "document-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    "pluggy>=1.5.0",
    "litellm>=1.60.0",
    "fastembed>=0.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=6.0.0",
    "sqlite-vec>=0.1.6",
    # API + Dashboard
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",
    # OCR (PDF/Bild-Texterkennung)
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    # TUI
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
kurier = "arkiv.cli:app"

[project.entry-points."arkiv.plugins"]

[tool.hatch.build.targets.wheel]
packages = ["src/arkiv"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "RUF012"]  # B008: typer defaults, RUF012: ctypes _fields_

[tool.ruff.lint.isort]
known-first-party = ["arkiv"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "sqlite_vec",
    "pymupdf",
    "pytesseract",
    "PIL.*",
    "arkiv_webhook",
    "uvicorn",
    "uvicorn.*",
    "fastapi",
    "fastapi.*",
    "textual",
    "textual.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["arkiv.inlets.api", "arkiv.dashboard.routes"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["arkiv.tui.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
