[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arkiv-webhook"
version = "0.1.0"
description = "Webhook route plugin for Arkiv — send classified items to any URL."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "arkiv>=0.2.0",
    "httpx>=0.27.0",
]

[project.entry-points."arkiv.plugins"]
webhook = "arkiv_webhook"

[tool.hatch.build.targets.wheel]
packages = ["src/arkiv_webhook"]
