[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotse-webhook"
version = "0.1.0"
description = "Webhook route plugin for Lotse — send classified items to any URL."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lotse>=0.1.0",
    "httpx>=0.27.0",
]

[project.entry-points."lotse.plugins"]
webhook = "lotse_webhook"

[tool.hatch.build.targets.wheel]
packages = ["src/lotse_webhook"]
